Add Security Config and AuthEntryPointJWT